# pdf-mate

./: .gitignore  CHANGELOG.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
src/pdf_mate/: __init__.py  cli.py  embedding.py  exceptions.py  llm.py  ocr.py  parser.py  rag.py  storage.py  summary.py  web.py
tests/: __init__.py  conftest.py  test_cli.py  test_embedding.py  test_exceptions.py  test_llm.py  test_ocr.py  test_parser.py  test_rag.py  test_storage.py  test_summary.py  test_web.py
