[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-mate"
version = "0.1.0"
description = "AI-powered PDF parsing, summarization, and conversational Q&A tool with RAG support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "junjunup", email = "junjunup@users.noreply.github.com" },
]
keywords = ["pdf", "ai", "rag", "llm", "ocr", "document", "question-answering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.10.0",
    "tiktoken>=0.5.0",
]
rag = [
    "openai>=1.10.0",
    "tiktoken>=0.5.0",
    "chromadb>=0.4.22",
]
local = [
    "sentence-transformers>=2.3.0",
]
web = [
    "gradio>=4.0.0",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
dev = [
    "openai>=1.10.0",
    "tiktoken>=0.5.0",
    "chromadb>=0.4.22",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
all = ["pdf-mate[llm,rag,local,web,ocr,dev]"]

[project.scripts]
pdf-mate = "pdf_mate.cli:app"

[project.urls]
Homepage = "https://github.com/junjunup/pdf-mate"
Repository = "https://github.com/junjunup/pdf-mate"
Issues = "https://github.com/junjunup/pdf-mate/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/pdf_mate/cli.py" = ["B008"]  # typer.Argument/Option in defaults is standard pattern
"tests/*" = ["SIM117"]  # nested with statements are fine in tests

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src/pdf_mate"]
